--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,13 @@
 name: 'Wait'
 description: 'Wait a designated number of milliseconds'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  token:  # id of input
+    description: 'id token'
     required: true
-    default: '1000'
-outputs:
-  time: # output will be available to future steps
-    description: 'The message to output'
+  channel:
+    description: 'channel ID'
+    required: true
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
