--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: Sergyland/discord-action
+      - uses: Sergyland/discord-action@main
         with: 
           channel: ${{ secrets.ChannelID }}
           token: ${{secrets.DiscordToken}}
