--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
     "@actions/core": "^1.2.5",
+    "@actions/github": "^5.0.0",
     "discord.js": "^12.5.3"
   },
   "devDependencies": {
